# Timro

./: .gitignore  CMakeLists.txt  README.md  Timro.rc  appInfo.cmake  buildType.cmake  main.cpp  main.qml
qml/: main.qml
qml/components/: AutoSizeText.qml
qml/components/buttons/: ControlButton.qml  ImageButton.qml
qml/components/controls/: BaseButton.qml  BaseComboBox.qml  CollapsableSection.qml  DialogDragMouseArea.qml  ImageButton.qml  MenuButton.qml  ProjectSelectionComboBox.qml  RotatingButton.qml  TextButton.qml
qml/components/delegates/: PanelListDelegate.qml
qml/components/effects/: GradientEffect.qml  RotatingShadowEffect.qml
qml/components/panel/: PanelTitle.qml
qml/components/time/: TimeBar.qml  TimeDisplay.qml  TimeEditDisplay.qml  TimeNumberSpinner.qml  TimeProgressArc.qml  TimeProgressCircle.qml  TimeTumbler.qml
qml/models/: IconAttributionsModel.qml
qml/pages/: AboutPage.qml  BasePage.qml  HomePage.qml  PageView.qml  ProjectListPage.qml
qml/panels/: BasePanel.qml  ListPanel.qml  MainMenu.qml  ProjectListPanel.qml  ProjectPanel.qml  TaskListPanel.qml  TimeControlPanel.qml  TimePanel.qml  WorkHistoryPanel.qml
qml/popups/: BaseConfirmPopup.qml  BreakWindow.qml  PopupContainer.qml  TimeTumblerPopup.qml
qml/style/: Style.qml
qml/utils/: DrawUtils.js  ModelUtils.js  TimeUtils.js
resources/shaders/: buttonRotate.frag  buttonRotate.frag.qsb  linearGradient.frag  linearGradient.frag.qsb  rotatingShadow.frag  timeEditArcGlow.frag  timeListOpacity.frag
src/: QtSingleApp.cpp  QtSingleApp.h  TimroCore.cpp  TimroCore.h  main.cpp
src/controllers/: ProjectController.cpp  ProjectController.h  TimeController.cpp  TimeController.h  TrayController.cpp  TrayController.h
src/database/: DatabaseCleaner.cpp  DatabaseCleaner.h  DatabaseMigrationWorker.cpp  DatabaseMigrationWorker.h  DatabaseProvider.cpp  DatabaseProvider.h  SqliteDatabaseProvider.cpp  SqliteDatabaseProvider.h
src/helpers/: DirHelper.cpp  DirHelper.h  QmlHelper.cpp  QmlHelper.h  Utils.cpp  Utils.h
src/models/: ProjectModel.cpp  ProjectModel.h  ProjectWorkHistoryModel.cpp  ProjectWorkHistoryModel.h  SqlModel.cpp  SqlModel.h
src/sql/: SqlWorker.cpp  SqlWorker.h
